--- a/MVC_Lab/Views/Home/Index.cshtml
+++ b/MVC_Lab/Views/Home/Index.cshtml
@@ -2,7 +2,9 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <h3><a href="../Trip/MileageForm">Mileage Form</a></h3>
-</div>
+    <div class="text-center">
+        <h1 class="display-4">Welcome</h1>
+        <h3><a href="../Trip/MileageForm">Mileage Form</a></h3>
+        <h3><a href="../Maths/AddNumbers">Add Numbers Form</a></h3>
+        <h3><a href="../Maths/DivideNumbers">Divide Numbers Form</a></h3>
+    </div>
